// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster app generator with default config should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "CASSANDRA_DRIVER_VERSION": "CASSANDRA_DRIVER_VERSION",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "HIBERNATE_VERSION",
  "JACKSON_DATABIND_NULLABLE_VERSION": "JACKSON_DATABIND_NULLABLE_VERSION",
  "JACOCO_VERSION": "JACOCO_VERSION",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "SPRING_BOOT_VERSION",
  "SPRING_CLOUD_VERSION": "SPRING_CLOUD_VERSION",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "applicationType": "monolith",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": Array [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "ehcache",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devServerPort": 4200,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateBuiltInAuthorityEntity": true,
  "generateBuiltInUserEntity": true,
  "generateUserManagement": true,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "caffeine": "'CAFFEINE-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": undefined,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": "no",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": "no",
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with gateway should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "CASSANDRA_DRIVER_VERSION": "CASSANDRA_DRIVER_VERSION",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "HIBERNATE_VERSION",
  "JACKSON_DATABIND_NULLABLE_VERSION": "JACKSON_DATABIND_NULLABLE_VERSION",
  "JACOCO_VERSION": "JACOCO_VERSION",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "SPRING_BOOT_VERSION",
  "SPRING_CLOUD_VERSION": "SPRING_CLOUD_VERSION",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "applicationType": "gateway",
  "applicationTypeGateway": true,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": Array [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheManagerIsAvailable": false,
  "cacheProvider": "no",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": true,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devR2dbcUrl": "r2dbc:h2:file:///./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devServerPort": 4200,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": false,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateBuiltInAuthorityEntity": true,
  "generateBuiltInUserEntity": true,
  "generateUserManagement": true,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "caffeine": "'CAFFEINE-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodR2dbcUrl": "r2dbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": true,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "webappEnumerationsDir": "src/main/webapp/app/entities/enumerations/",
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": "no",
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with microservice should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "CASSANDRA_DRIVER_VERSION": "CASSANDRA_DRIVER_VERSION",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "HIBERNATE_VERSION",
  "JACKSON_DATABIND_NULLABLE_VERSION": "JACKSON_DATABIND_NULLABLE_VERSION",
  "JACOCO_VERSION": "JACOCO_VERSION",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "17",
    "18",
    "19",
  ],
  "JAVA_VERSION": "JAVA_VERSION",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "SPRING_BOOT_VERSION",
  "SPRING_CLOUD_VERSION": "SPRING_CLOUD_VERSION",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "applicationType": "microservice",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": true,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationUsesCsrf": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "blueprints": Array [],
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "hazelcast",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": true,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "no",
  "clientFrameworkAngular": false,
  "clientFrameworkAny": false,
  "clientFrameworkNo": true,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": undefined,
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": false,
  "clientThemePrimary": false,
  "clientThemeVariant": undefined,
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabasePassword": "",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devDatabaseUsername": "jhipster",
  "devHibernateDialect": "org.hibernate.dialect.H2Dialect",
  "devJdbcDriver": "org.h2.Driver",
  "devJdbcUrl": "jdbc:h2:file:./target/h2db/db/jhipster;DB_CLOSE_DELAY=-1",
  "devLiquibaseUrl": "jdbc:h2:file:\${project.build.directory}/h2db/db/jhipster",
  "devServerPort": undefined,
  "dockerContainers": Object {
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "confluentinc/cp-kafka": "confluentinc-cp-kafka-placeholder",
    "confluentinc/cp-zookeeper": "confluentinc-cp-zookeeper-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
    "zookeeper": "zookeeper-placeholder",
    "zookeeperImage": "zookeeper-image-placeholder",
    "zookeeperTag": "zookeeper-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "services/jhipster",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "generateBuiltInAuthorityEntity": false,
  "generateBuiltInUserEntity": false,
  "generateUserManagement": false,
  "gradleVersion": "GRADLE_VERSION",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "awaitility": "'AWAITILITY-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "caffeine": "'CAFFEINE-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "git-commit-id-plugin": "'GIT-COMMIT-ID-PLUGIN-VERSION'",
    "hazelcast-hibernate53": "'HAZELCAST-HIBERNATE-53-VERSION'",
    "hazelcast-spring": "'HAZELCAST-SPRING-VERSION'",
    "jaxb-runtime": "'JAXB-RUNTIME-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "junit-platform-launcher": "'JUNIT-PLATFORM-LAUNCHER-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "maven-clean-plugin": "'MAVEN-CLEAN-PLUGIN-VERSION'",
    "maven-compiler-plugin": "'MAVEN-COMPILER-PLUGIN-VERSION'",
    "maven-eclipse-plugin": "'MAVEN-ECLIPSE-PLUGIN-VERSION'",
    "maven-enforcer-plugin": "'MAVEN-ENFORCER-PLUGIN-VERSION'",
    "maven-failsafe-plugin": "'MAVEN-FAILSAFE-PLUGIN-VERSION'",
    "maven-idea-plugin": "'MAVEN-IDEA-PLUGIN-VERSION'",
    "maven-jar-plugin": "'MAVEN-JAR-PLUGIN-VERSION'",
    "maven-javadoc-plugin": "'MAVEN-JAVADOC-PLUGIN-VERSION'",
    "maven-resources-plugin": "'MAVEN-RESOURCES-PLUGIN-VERSION'",
    "maven-site-plugin": "'MAVEN-SITE-PLUGIN-VERSION'",
    "maven-surefire-plugin": "'MAVEN-SUREFIRE-PLUGIN-VERSION'",
    "maven-war-plugin": "'MAVEN-WAR-PLUGIN-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "typesafe": "'TYPESAFE-VERSION'",
    "validation-api": "'VALIDATION-API-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": "no",
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDependencies": Object {
    "concurrently": "CONCURRENTLY_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageFolder": "com/mycompany/myapp/",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabasePassword": "",
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "prodDatabaseUsername": "jhipster",
  "prodHibernateDialect": "org.hibernate.dialect.PostgreSQLDialect",
  "prodJdbcDriver": "org.postgresql.Driver",
  "prodJdbcUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "prodLiquibaseUrl": "jdbc:postgresql://localhost:5432/jhipster",
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8081,
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": true,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": true,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "upperFirstCamelCaseBaseName": "Jhipster",
  "websocket": "no",
  "withAdminUi": false,
}
`;
